--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "Eero Lehtinen",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^7.0.0",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
@@ -18,5 +19,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.14"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
