--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "apollo-server": "^2.15.1",
     "graphql": "^15.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.22",
+    "mongoose-unique-validator": "^2.0.3",
     "uuid": "^8.2.0"
   }
 }
