--- a/part9/calculators/.eslintrc
+++ b/part9/calculators/.eslintrc
@@ -27,6 +27,6 @@
 	},
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
-		"project": "./part9/tsconfig.json"
+		"project": "./part9/calculators/tsconfig.json"
 	}
 }
