--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -1,20 +1,22 @@
 {
-	"name": "calculators",
+	"name": "part9",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"calculateBmi": "ts-node bmiCalculator.ts",
-		"calculateExercises": "ts-node exerciseCalculator.ts",
-		"dev": "ts-node-dev index.ts",
-		"lint": "eslint --ext .ts ."
+		"dev": "ts-node-dev ./src/index.ts",
+		"lint": "eslint --ext .ts .",
+		"tsc": "tsc",
+		"start": "node build/index.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/cors": "^2.8.6",
 		"@types/express": "^4.17.7",
 		"@types/node": "^14.0.23",
+		"@types/uuid": "^8.0.0",
 		"@typescript-eslint/eslint-plugin": "^3.6.1",
 		"@typescript-eslint/parser": "^3.6.1",
 		"eslint": "^7.4.0",
@@ -23,6 +25,8 @@
 		"typescript": "^3.9.6"
 	},
 	"dependencies": {
-		"express": "^4.17.1"
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"uuid": "^8.2.0"
 	}
 }
